syntax = "proto3";

package go.micro.srv.PostHousesImage;

service Example {
	rpc PostHousesImage(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	bytes Image=1;
	string Id=2;
	int64 Filesize=3;
	string FileName=4;
}

message Response {
	string Errno = 1;
	string Errmsg=2;
	string url=3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
